fix grid-gap

--- a/src/components/ListItems/ListItems.module.scss
+++ b/src/components/ListItems/ListItems.module.scss
@@ -3,7 +3,7 @@
 
 .items {
   display: grid;
-  grid-gap: 16px;
+  grid-gap: pxtorem(16);
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   color: $secondary-text-colour;
   text-align: center;
