--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -4,7 +4,7 @@
 .skills {
   margin-bottom: pxtorem(30);
   display: grid;
-  grid-gap: 16px;
+  grid-gap: pxtorem(16);
   color: $secondary-text-colour;
   text-align: center;
 
