--- a/src/components/Stats/Stats.module.scss
+++ b/src/components/Stats/Stats.module.scss
@@ -3,7 +3,7 @@
 
 .lighterNote {
   display: grid;
-  grid-gap: 16px;
+  grid-gap: pxtorem(16);
 
   @media (min-width: $bp-sm) {
     grid-template-columns: repeat(4, 1fr);
